<resources>
    <string name="app_name">Simple Weather</string>
    <string name="change_city">Change City</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">86f50ae95434c4d7bea2bbd02c388863</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="options">Options</string>
    <string name="item">Edit City</string>
    <string name="openweathermap_api_key">OpenWeatherMap API Key</string>
    <string name="location">Location</string>
    <string name="enter">Enter</string>
    <string name="keyIsEmpty">Enter your API Key</string>
    <string name="locationIsEmpty">Enter Location</string>
    <string name="units">Units:</string>
    <string name="metric">Metric</string>
    <string name="retarded">Retarded</string>
    <string name="humidity">Humdity: </string>
    <string name="pressure">Pressure: </string>

</resources>
